FEM: bugfix for fenics_mesh_export 2D and update cmakefile for importGmshMesh.py

--- a/src/Mod/Fem/CMakeLists.txt
+++ b/src/Mod/Fem/CMakeLists.txt
@@ -25,6 +25,7 @@ INSTALL(
         readFenicsXDMF.py
         writeFenicsXDMF.py
         importFenicsMesh.py
+        importGmshMesh.py
         importInpMesh.py
         importToolsFem.py
         importVTKResults.py
